--- a/src/Resources/views/widget/stats_widget.html.twig
+++ b/src/Resources/views/widget/stats_widget.html.twig
@@ -6,7 +6,31 @@
             {% if not data %}
                 {{ 'text.config_stats'|trans(domain='LleDashboardBundle') }}
             {% else %}
-                {{ dump(data) }}
+                <div>
+                    <canvas id="widget_canvas_{{ widget.id }}" data-widgets="{{ data|json_encode()|e('html_attr') }}"></canvas>
+                </div>
+
+                <script>
+                    let datas = JSON.parse(document.getElementById('widget_canvas_{{ widget.id }}').dataset.widgets);
+
+                    const data = {
+                        labels: datas.dataXAxis,
+                        datasets: [{
+                            data: datas.dataYAxis,
+                            label: datas.labelYAxis,
+                        }],
+                    };
+
+                    const config = {
+                        type: 'bar',
+                        data: data,
+                    };
+
+                    const widget = new Chart(
+                        document.getElementById('widget_canvas_{{ widget.id }}'),
+                        config,
+                    );
+                </script>
             {% endif %}
         {% endblock widget_body %}
     </div>
