Feature : print widget 2le/crudit#388

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -60,7 +60,7 @@
     display: none;
 }
 
-.widget-close, .widget-config, .lle-dashboard-widget-export, .lle-dashboard-widget-edit {
+.widget-close, .widget-config, .lle-dashboard-widget-edit {
     cursor: pointer;
 }
 
