--- a/src/Resources/views/widget/includes/_buttons.html.twig
+++ b/src/Resources/views/widget/includes/_buttons.html.twig
@@ -1,13 +1,13 @@
-{% block widget_export_button %}
-    {% if exportable is not defined or (exportable is defined and exportable != false) %}
-        <span
-                class="lle-dashboard-widget-export far fa-file show-hover"
-                data-export="widget_{{ widget.id }}"
-                data-export-name="{{ widget.title|default(widget.name|trans) }}"
-                {% if exportable is defined and exportable.orientation is defined %}data-export-orientation="{{ exportable.orientation }}"{% endif %}
-                {% if exportable is defined and exportable.format is defined %}data-export-format="{{ exportable.format }}"{% endif %}
-                title="{{ 'widget.pdf_export'|trans(domain='LleDashboardBundle') }}">
-        </span>
+{% block widget_print_button %}
+    {% if printable is not defined or (printable is defined and printable != false) %}
+        <a
+            href="{{ path('print_widget', {id: widget.id}) }}"
+            title="{{ 'widget.print'|trans(domain='LleDashboardBundle') }}"
+            class="show-hover"
+            target="_blank"
+        >
+            <i class="far fa-file"></i>
+        </a>
     {% endif %}
 {% endblock %}
 
