--- a/src/Resources/views/widget/print_widget.html.twig
+++ b/src/Resources/views/widget/print_widget.html.twig
@@ -1,3 +1,5 @@
+{% block widget_header %}{% endblock %}
+
 {% block widget_title %}
     <h1 class="card-title">
         {{ title|trans }}
@@ -7,6 +9,8 @@
 {% block widget_body %}
     {{ html|raw }}
 {% endblock widget_body %}
+
+{% block widget_footer %}{% endblock %}
 
 {% block stylesheets %}
     {% for cssTag in cssTags %}
